feat: :zap: update scripts